--- a/witchcraft.css
+++ b/witchcraft.css
@@ -1,457 +1,486 @@
 
 @font-face {
-    font-family:"Kaushan";
-    src: url('https://fonts.googleapis.com/css?family=Kaushan+Script')
+  font-family:"Kaushan";
+  src: url('https://fonts.googleapis.com/css?family=Kaushan+Script')
 }
 /*-------- Fieldset----------*/
 .charsheet .repcontrol_add {
-    display: block;
-    background:#616f6f;
-    color:#b1c2b4;
-    text-shadow:0px 0px 2px #000,0px 0px 2px #000,0px 0px 2px #000;
-    box-shadow:none;
-    float:left!important;
-    margin-bottom:0px;
-    font-size:0.9em;
-    height:2.2em;
-    font-family: Copperplate, 'Copperplate Gothic Light', fantasy;
+  display: block;
+  background:#616f6f;
+  color:#b1c2b4;
+  text-shadow:0px 0px 2px #000,0px 0px 2px #000,0px 0px 2px #000;
+  box-shadow:none;
+  float:left!important;
+  margin-bottom:0px;
+  font-size:0.9em;
+  height:2.2em;
+  font-family: Copperplate, 'Copperplate Gothic Light', fantasy;
 }
-.charsheet .repcontrol_edit
-{
-    display: inline-block;
-    background:#616f6f;
-    color:#b1c2b4;
-    text-shadow:0px 0px 2px #000,0px 0px 2px #000,0px 0px 2px #000;
-    box-shadow:none;
-    float:none!important;
-    margin-bottom:5px;
-    font-size:0.9em;
-    height:2.2em;
-    font-family: Copperplate, 'Copperplate Gothic Light', fantasy;
+
+.charsheet .repcontrol_edit {
+  display: inline-block;
+  background:#616f6f;
+  color:#b1c2b4;
+  text-shadow:0px 0px 2px #000,0px 0px 2px #000,0px 0px 2px #000;
+  box-shadow:none;
+  float:none!important;
+  margin-bottom:5px;
+  font-size:0.9em;
+  height:2.2em;
+  font-family: Copperplate, 'Copperplate Gothic Light', fantasy;
 }
+
 .charsheet .repcontrol_del {
-    background:#616f6f;
-    color:#b1c2b4;
-    text-shadow:0px 0px 2px #000,0px 0px 2px #000,0px 0px 2px #000;
-    box-shadow:none;
-    float:none!important;
-    margin-bottom:5px;
-    font-size:0.9em;
-    height:2.2em;
+  background:#616f6f;
+  color:#b1c2b4;
+  text-shadow:0px 0px 2px #000,0px 0px 2px #000,0px 0px 2px #000;
+  box-shadow:none;
+  float:none!important;
+  margin-bottom:5px;
+  font-size:0.9em;
+  height:2.2em;
 }
+
 .charsheet .repcontrol_move {
-    display: inline-block;
-    background:#616f6f;
-    color:#b1c2b4;
-    text-shadow:0px 0px 2px #000,0px 0px 2px #000,0px 0px 2px #000;
-    box-shadow:none;
-    float:none!important;
-    margin-bottom:5px;
-    font-size:0.9em;
-    height:1.4em;
-    padding-top:3px;
-    padding-bottom:3px;
-    }
+  display: inline-block;
+  background:#616f6f;
+  color:#b1c2b4;
+  text-shadow:0px 0px 2px #000,0px 0px 2px #000,0px 0px 2px #000;
+  box-shadow:none;
+  float:none!important;
+  margin-bottom:5px;
+  font-size:0.9em;
+  height:1.4em;
+  padding-top:3px;
+  padding-bottom:3px;
+}
+
 /*---------background---------------*/
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
   align:right;
 }
 
 input[type=number] {
-    text-align:center;
+  text-align:center;
 }
+
 label {
-    color:white;
-    font-weight:normal;
-    text-align:center;
+  color:white;
+  font-weight:normal;
+  text-align:center;
 }
+
 .charsheet {
-    background-color:black;
-    width:850px;
+  background-color:black;
+  width:850px;
 }
+
 .sheet-block {
-    background-color:#e4d7bb;
-    background-image:url(https://i.imgur.com/11tkYQy.jpg);
-    background-repeat:no-repeat;
-    width:850px;
-    padding-bottom:50px;
+  background-color:#e4d7bb;
+  background-image:url(https://i.imgur.com/11tkYQy.jpg);
+  background-repeat:no-repeat;
+  width:850px;
+  padding-bottom:50px;
 }
 
 .sheet-characterblock {
-    position:relative; 
-    left:430px;top:32px;
-    width:400px;
+  position:relative;
+  left:430px;top:32px;
+  width:400px;
 }
+
 /*--------Tricks----------*/
 input.sheet-hidden {
-    
-    position:absolute;
-    left:0px;
-    opacity:0;
-    width:150px;
-    height:30px;
+  position:absolute;
+  left:0px;
+  opacity:0;
+  width:150px;
+  height:30px;
 }
+
 .sheet-invisible {
-    display:none;
-    
+  display:none;
 }
 
 /*------Formatting------*/
 div.sheet-columns {
-    display:block;
-    overflow:auto;
+  display:block;
+  overflow:auto;
 }
+
 div.sheet-col2 {
-    width: calc(40% - 50px);
-    margin-right:30px;
+  width: calc(40% - 50px);
+  margin-right:30px;
 }
+
 div.sheet-left {
-    margin-left: 60px;
-    float:left;
+  margin-left: 60px;
+  float:left;
 }
+
 div.sheet-right {
-    margin-right: 60px;
-    float:right;
+  margin-right: 60px;
+  float:right;
 }
+
 div.sheet-right2 {
-    margin-right: 92px;
-    float:right;
+  margin-right: 92px;
+  float:right;
 }
+
 .sheet-rolltemplate-skill .inlinerollresult  {
-    display: inline-block;
- /*   min-width: 1.5em; */
-    text-align: center;
-    border: none; /*Cool Gray 6 C*/
-    background:none;
-    padding:0px;
+  display: inline-block;
+  /*   min-width: 1.5em; */
+  text-align: center;
+  border: none; /*Cool Gray 6 C*/
+  background:none;
+  padding:0px;
 }
 
 .sheet-rolltemplate-skill .inlinerollresult.fullfail {
-
-    border: none; /*Cool Gray 6 C*/
-    background:none;
+  border: none; /*Cool Gray 6 C*/
+  background:none;
 }
 
 .sheet-rolltemplate-skill .inlinerollresult.importantroll {
-
-    border: none; /*Cool Gray 6 C*/
-    background:none;
+  border: none; /*Cool Gray 6 C*/
+  background:none;
 }
 
 .sheet-rolltemplate-skill .inlinerollresult.fullcrit {
-
-    border: none; /*Cool Gray 6 C*/
-    background:none;
-     
- }
-.sheet-header1 {
-    font-family:"Patrick Hand","Kaushan","Palatino Linotype", Georgia;
-    background:transparent;
-    line-height:32px;
-    font-size:2em;
-    width:400px;
-    border-style:solid;
-    border: none;
-    box-shadow: inset 0px 0px 0px 0px red;
-
+  border: none; /*Cool Gray 6 C*/
+  background:none;
 }
+
+.sheet-header1 {
+  font-family:"Patrick Hand","Kaushan","Palatino Linotype", Georgia;
+  background:transparent;
+  line-height:32px;
+  font-size:2em;
+  width:400px;
+  border-style:solid;
+  border: none;
+  box-shadow: inset 0px 0px 0px 0px red;
+}
+
 input.sheet-value1[type=number] {
-    padding:0px;
-    line-height:45px;
-    font-size:2em;
-    width:45px;
-    background-color:transparent;
-    border:0;
-    color:#333366;
-    font-family: "Patrick Hand";
+  padding:0px;
+  line-height:45px;
+  font-size:2em;
+  width:45px;
+  background-color:transparent;
+  border:0;
+  color:#333366;
+  font-family: "Patrick Hand";
 }
 
 input.sheet-value2[type=number] {
-    padding:0px;
-    line-height:35px;
-    width:60px;
-    font-size:2em;
-    background-color:white;
-    border:2px solid #b0c2b4;
-    color:#333366;
-    font-family: "Patrick Hand";
+  padding:0px;
+  line-height:35px;
+  width:60px;
+  font-size:2em;
+  background-color:white;
+  border:2px solid #b0c2b4;
+  color:#333366;
+  font-family: "Patrick Hand";
 }
 
 input.sheet-value3[type=number] {
-    padding:0px;
-    padding-right:5px;
-    line-height:37px;
-    width:37px;
-    font-size:1.2em;
-    border-radius:0px 50% 50% 0px;
-    font-family: "Patrick Hand";
-    background-color:#b0c2b4;
-    color:white;
-    position:relative;
-    left:-4px;
+  padding:0px;
+  padding-right:5px;
+  line-height:37px;
+  width:37px;
+  font-size:1.2em;
+  border-radius:0px 50% 50% 0px;
+  font-family: "Patrick Hand";
+  background-color:#b0c2b4;
+  color:white;
+  position:relative;
+  left:-4px;
 }
+
 input.sheet-value3:focus, input.sheet-value3:active {
-    border:none;
-    outline:none;
+  border:none;
+  outline:none;
 }
+
 input.sheet-input1 {
-    width:235px;
-    font-family: "Patrick Hand", "Palatino Linotype";
-    font-size:1.1em;
-    background:transparent;
-    padding:0px;
-    padding-left:20px;
-    font-weight:bold;
-    text-align:center;
+  width:235px;
+  font-family: "Patrick Hand", "Palatino Linotype";
+  font-size:1.1em;
+  background:transparent;
+  padding:0px;
+  padding-left:20px;
+  font-weight:bold;
+  text-align:center;
 }
+
 input.sheet-input2 {
-    width:240px;
-    font-family: "Patrick Hand", "Palatino Linotype";
-    font-size:1.1em;
-    background:transparent;
-    padding:0px;
-    padding-left:20px;
-    font-weight:bold;
+  width:240px;
+  font-family: "Patrick Hand", "Palatino Linotype";
+  font-size:1.1em;
+  background:transparent;
+  padding:0px;
+  padding-left:20px;
+  font-weight:bold;
 }
+
 input.sheet-points {
-    font-family: "Patrick Hand", "Palatino Linotype";
-    width:40px;
-    font-size:1.1em;
-    padding:0px;
-    background:transparent;
-    text-align:center;
+  font-family: "Patrick Hand", "Palatino Linotype";
+  width:40px;
+  font-size:1.1em;
+  padding:0px;
+  background:transparent;
+  text-align:center;
 }
+
 input.sheet-inputlong {
-    width:130px;
-    font-family: "Patrick Hand", "Palatino Linotype";
-    font-size:1.1em;
-    background:transparent;
-    padding:0px;
-    font-weight:bold;
+  width:130px;
+  font-family: "Patrick Hand", "Palatino Linotype";
+  font-size:1.1em;
+  background:transparent;
+  padding:0px;
+  font-weight:bold;
 }
+
 input.sheet-inputmed {
-    width:110px;
-    font-family: "Patrick Hand", "Palatino Linotype";
-    font-size:1.1em;
-    background:transparent;
-    padding:0px;
-    text-align:center;
+  width:110px;
+  font-family: "Patrick Hand", "Palatino Linotype";
+  font-size:1.1em;
+  background:transparent;
+  padding:0px;
+  text-align:center;
 }
+
 input.sheet-inputshort {
-    width:30px;
-    font-family: "Patrick Hand", "Palatino Linotype";
-    font-size:1.1em;
-    background:transparent;
-    padding:0px;
-    font-weight:bold;
-    text-align:center;
+  width:30px;
+  font-family: "Patrick Hand", "Palatino Linotype";
+  font-size:1.1em;
+  background:transparent;
+  padding:0px;
+  font-weight:bold;
+  text-align:center;
 }
+
 tr.sheet-subheader {
-    font-size:.7em;
-    line-height:.7em;
-    text-align:center;
-    background-color:#616f6f;
-    color:white;
-    opacity:1;
-    
+  font-size:.7em;
+  line-height:.7em;
+  text-align:center;
+  background-color:#616f6f;
+  color:white;
+  opacity:1;
 }
+
 /*----Roll Templates---*/
 .sheet-rolltemplate-skill {
-	background:none;
-    font-family:"Book Antiqua";
-    width:235px;
-    font-size: 1em;
-    line-height: 1em;
-    color: #53332a;
+  background:none;
+  font-family:"Book Antiqua";
+  width:235px;
+  font-size: 1em;
+  line-height: 1em;
+  color: #53332a;
 }
+
 .sheet-rolltemplate-skill table {
-	position:relative;
-	top:-50px;
-	width:210px;
-	margin:auto;
-	border-collapse:separate;
+  position:relative;
+  top:-50px;
+  width:210px;
+  margin:auto;
+  border-collapse:separate;
 }
+
 .sheet-rolltemplate-skill th {
-	background:#e6dbc6;
-	font-size:1.4em;
-	line-height:1.2em;
-	border: 10px solid black;
-	
-	-webkit-border-image: url(https://i.imgur.com/AoJHLa5.png) 16 stretch; /* Safari 3.1-5 */
-	-o-border-image: url(https://i.imgur.com/AoJHLa5.png) 16 stretch; /* Opera 11-12.1 */
-	border-image: url(https://i.imgur.com/AoJHLa5.png) 16 stretch;
-	
-	border-image-outset:6px;
-	border-image-width:10px;
-	border-spacing:20px;
-	padding:0px;
-		
+  background:#e6dbc6;
+  font-size:1.4em;
+  line-height:1.2em;
+  border: 10px solid black;
+
+  -webkit-border-image: url(https://i.imgur.com/AoJHLa5.png) 16 stretch; /* Safari 3.1-5 */
+  -o-border-image: url(https://i.imgur.com/AoJHLa5.png) 16 stretch; /* Opera 11-12.1 */
+  border-image: url(https://i.imgur.com/AoJHLa5.png) 16 stretch;
+
+  border-image-outset:6px;
+  border-image-width:10px;
+  border-spacing:20px;
+  padding:0px;
 }
+
 .sheet-rolltemplate-skill td {
-/*	background-image:url("https://i.imgur.com/gIacv0f.jpg");    */
-	padding-left:10px;
-	padding-right:10px;
+/*  background-image:url("https://i.imgur.com/gIacv0f.jpg");    */
+  padding-left:10px;
+  padding-right:10px;
 }
+
 .sheet-rolltemplate-skill td.sheet-label {
-    width:50%;
-    font-size:12px;
-    line-height:1em;
-	text-align:center;
-	font-weight:bold;
+  width:50%;
+  font-size:12px;
+  line-height:1em;
+  text-align:center;
+  font-weight:bold;
 }
+
 .sheet-rolltemplate-skill td.sheet-result {
-    width:50%;
-    font-size:12px;
-    font-size:1em;
-    line-height:1em;
-    text-align:right;
-    font-weight:bold;
-    padding:0px;
-    padding-right:50px;
-    min-width:none;
+  width:50%;
+  font-size:12px;
+  font-size:1em;
+  line-height:1em;
+  text-align:right;
+  font-weight:bold;
+  padding:0px;
+  padding-right:50px;
+  min-width:none;
 }
 
 .sheet-rolltemplate-skill td.sheet-textfield {
-	font-style:italic;
-	font-size: .8em;
+  font-style:italic;
+  font-size: .8em;
 }
+
 .sheet-rolltemplate-skill td.sheet-bigresult {
-    background-color:none;
-    padding: 0px;
-    font-weight: bold;
-	background-image:url("https://i.imgur.com/vwr2aQo.png");
-	background-repeat:no-repeat;
-	background-position:49.5%;
-	text-align:center;
-	position:relative;
-	font-size:25px;
-	color:white;
-	line-height:55px;
-    text-shadow:
-        -1px -1px 0 #000,  
-        1px -1px 0 #000,
-        -1px 1px 0 #000,
-        1px 1px 0 #000,
-        1px -2px 1px #000;
+  background-color:none;
+  padding: 0px;
+  font-weight: bold;
+  background-image:url("https://i.imgur.com/vwr2aQo.png");
+  background-repeat:no-repeat;
+  background-position:49.5%;
+  text-align:center;
+  position:relative;
+  font-size:25px;
+  color:white;
+  line-height:55px;
+  text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000,
+    1px -2px 1px #000;
 }
+
 .sheet-rolltemplate-skill .sheet-bigresult .inlinerollresult {
-    vertical-align:-5px;
+  vertical-align:-5px;
 }
+
 /*-----Button---------*/
 .sheet-button button[type="roll"]:before,
 .sheet-button:before  {
-    content: "0"!important;
-    display: none;
-    border: none;
+  content: "0"!important;
+  display: none;
+  border: none;
 }
+
 .sheet-button button[type="roll"],
 .sheet-button {
-    display: block;
-    background:url("https://i.imgur.com/96aRDdi.png");
-    margin: 0px auto;
-    font-family: 'Contrail One', Copperplate Gothic Light, 'Copperplate Gothic Light';
-    font-size:1em !important;  
-    color:white;
-    text-shadow: 1px 1px 2px black;
-    font-weight:bold;
-    height:25px; 
-    width: 25px; 
-    padding-left:0px;;
-    border:none;
+  display: block;
+  background:url("https://i.imgur.com/96aRDdi.png");
+  margin: 0px auto;
+  font-family: 'Contrail One', Copperplate Gothic Light, 'Copperplate Gothic Light';
+  font-size:1em !important;
+  color:white;
+  text-shadow: 1px 1px 2px black;
+  font-weight:bold;
+  height:25px;
+  width: 25px;
+  padding-left:0px;;
+  border:none;
 }
+
 .sheet-button button[type="roll"]:hover,
 .sheet-button:hover  {
-    background:url("https://i.imgur.com/HMXA2QE.png");
+  background:url("https://i.imgur.com/HMXA2QE.png");
 }
 
 .sheet-button button[type="roll"]:active,
 .sheet-button:active  {
-    background:url("https://i.imgur.com/Xht7AhA.png");
+  background:url("https://i.imgur.com/Xht7AhA.png");
 }
+
 /*-----Attributes--------*/
 table.sheet-primary {
-    margin-top:4px;
-    margin-left:30px;
-    width: 440px;
-    height:160px;
-    color:red;
-    text-align:center;
-    overflow:auto;
+  margin-top:4px;
+  margin-left:30px;
+  width: 440px;
+  height:160px;
+  color:red;
+  text-align:center;
+  overflow:auto;
 }
 
 table.sheet-secondary {
-    position:relative;
-    left:180px;
-    top:-5px;
-    width:90px;
-    border:0px;
-    border-collapse:collapse;
-    padding:0px;
-    margin:0px;
-    border-spacing:0px;
+  position:relative;
+  left:180px;
+  top:-5px;
+  width:90px;
+  border:0px;
+  border-collapse:collapse;
+  padding:0px;
+  margin:0px;
+  border-spacing:0px;
 }
 
 tr.sheet-secondary {
-    height:40px;
+  height:40px;
 }
 
-
 .sheet-attrselect {
-    position:relative;
-    width:140px;
-    color:white;
-    font-family: Impact, Charcoal, sans-serif;
-    font-size:1.2em;
-    font-weight:normal;
-    text-align:center;
-    text-shadow: 0px 0px 4px black;
-    margin:0px;
-    padding:0px;
-    padding-top:10px;
+  position:relative;
+  width:140px;
+  color:white;
+  font-family: Impact, Charcoal, sans-serif;
+  font-size:1.2em;
+  font-weight:normal;
+  text-align:center;
+  text-shadow: 0px 0px 4px black;
+  margin:0px;
+  padding:0px;
+  padding-top:10px;
 }
 
 .sheet-attrselect label:hover, .sheet-attrselect input:hover + label {
-    color:#b0c2b4;
+  color:#b0c2b4;
 }
+
 .sheet-attrselect input:checked + label {
-    color:#b0c2b4;
-    font-size:1.5em;
+  color:#b0c2b4;
+  font-size:1.5em;
 }
 /*----------tables----------*/
 
 .sheet-table1 {
-    font-family: "Patrick Hand", "Palatino Linotype";
-    width:300px;
-    font-size:1em;
+  font-family: "Patrick Hand", "Palatino Linotype";
+  width:300px;
+  font-size:1em;
 }
 .sheet-tablelonger {
-    width:330px;
+  width:330px;
 }
+
 .sheet-table1 tr {
-    border-bottom:2px solid #616f6f;
-    
+  border-bottom:2px solid #616f6f;
 }
+
 .sheet-table1 td {
-    background:rgba(234,216,186,0.5);
-    
+  background:rgba(234,216,186,0.5);
 }
+
 .sheet-table1 th {
-    background-color:#112626;
-    
-    color:white;
-    font-size:1.5em;
-    height:1em;
-    border:0;
+  background-color:#112626;
+  color:white;
+  font-size:1.5em;
+  height:1em;
+  border:0;
 }
+
 th.sheet-left {
-    border-radius:10px 50% 0px 0px;
+  border-radius:10px 50% 0px 0px;
 }
+
 th.sheet-right {
-    border-radius:50% 10px 0px 0px;
+  border-radius:50% 10px 0px 0px;
 }
+
 td.sheet-border {
-    border-left:2px solid #616f6f;
+  border-left:2px solid #616f6f;
 }
